# SP-14-Blue-Chess-AI

./: .gitignore  README.md  gen_svg_board.py  index.html  notes.py  pyproject.toml  requirements.txt  run.py  run_2.py  test.py
app/: __init__.py  ai.py  decorators.py  game_manager.py  mcts.py  routes.py  rp.py  state.py
app/data/: index_to_move.json  move_index_dict.json
app/static/css/: board.css  chessboard.css  index.css  layout.css  play.css
app/static/scripts/: board.js  chessboard.js  index.js  layout.js  play.js
app/templates/: board.html  index.html  layout.html  play.html
app/templates/components/: chessboard.html
app_old/: __init__.py  ai.py  routes.py
app_old/static/css/: layout.css
app_old/static/scripts/: board.js
bitboarder/: bit_utils.py  bitboard.py  consts.py  generators.py  mask_gens.py  move.py  utils.py
chess/: __init__.py  _board.py  _eval.py  _pieces.py  bitboard.py  engine.py  generators.py  literals.py  move.py  utils.py  zobrist.py
chess_engine_OLD/: _board.py  _piece_type.py  _pieces.py  engine.py
docs/: index.html
neural_net/: data_prep.ipynb  requirements.txt  train_test.ipynb
src/: board.py  const.py  consts.py  decorators.py  game.py  game_interface.py  main.py  piece.py
src/chess/: __init__.py  _color.py  _eval.py  _move.py  _pieces.py  _state.py  _utils.py  board.py  chess_board.py  chess_game.py  engine.py  pieces.py  utils.py
src/chess/enums/: __init__.py  (+2 more)
src/chess_gui/: __init__.py  _consts.py  _renderer.py  gui.py
src/pygame_gui/: __init__.py  _screens.py  chess_gui.py  gui.py  gui_event.py
