[project]
name = "sp-14-blue-chess-ai"
version = "0.1.0"
description = "Chess AI engine. Play against AI or another player."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false